--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,8 @@
     "spatie/laravel-fractal": "^5.3",
     "v8ch/eloquent-model-traits": "^0.1.0"
   },
+  "require-dev": {
+    "squizlabs/php_codesniffer": "^3.3"
+  },
   "version": "0.0.1"
 }
