--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
   "name": "v8ch/laravel-auth-api",
   "require": {
     "php": "^7.0",
-    "v8ch/eloquent-model-traits": "^0.1.0"
+    "v8ch/eloquent-model-traits": "^0.1.0",
+    "laravel/passport": "^6.0"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.3"
